# target-mssql

./: pyproject.toml
target_mssql/: connector.py  sinks.py
