[tool.poetry]
name = "target-mssql"
version = "0.3.0"
description = "`target-mssql` is a Singer target for mssql, built with the Meltano SDK for Singer Targets."
authors = ["Henning Holgersen", "Joel Kemppainen"]
keywords = [
    "ELT",
    "mssql",
]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = ">=3.7.1,<3.13"
requests = "^2.32"
singer-sdk = "^0.41"
pyodbc = "^5.1.0"
sqlalchemy = "^2.0"

[tool.poetry.dev-dependencies]
pytest = "^8.3"
tox = "^4.21"
flake8 = "^3.9.2"
black = "^24.8"
pydocstyle = "^6.3"
mypy = "^1.11"
types-requests = "^2.32"
isort = "^5.13"

[tool.isort]
profile = "black"
multi_line_output = 3 # Vertical Hanging Indent
src_paths = "target_mssql"

[build-system]
requires = ["poetry-core>=1.0.8"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI declaration
target-mssql = 'target_mssql.target:Targetmssql.cli'
